# GAIA-pulse

./: .env.example  .gitignore  FRONTEND_API_INTEGRATION.md  README.md  env.example  pyproject.toml
config/: regions.yaml  settings.py
gaia-frontend/: .gitignore  package-lock.json  package.json
gaia-frontend/app/: globals.css  layout.tsx  page.tsx
gaia-frontend/components/: EarthGlobe.tsx  GaiaDashboard.tsx
gaia-frontend/lib/: api.ts  weather.ts
infra/: state_machine.asl.json
lambdas/ingest/: handler.py
lambdas/narrative/: handler.py
requirements/: ingest.txt
scripts/: package.sh
tests/: __init__.py  test_ingest_s3.py  test_narrative_bedrock.py
web/: demo.html
